# MCP_Weather_Math_Sever

./: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weatherserver.py
